# Rust

./: .gitignore  NOTES.md  Readme.md  questions.md
Chapter_13/: Cargo.toml
Chapter_13/src/: main.rs
Chapter_7_crates/: Cargo.toml
Chapter_7_crates/src/: import.rs  lib.rs  main.rs
Guessing_Game/: Cargo.toml
Guessing_Game/src/: main.rs
Hello_Cargo/: NOTES.md
Lets_Get_Rusty/: Cargo.toml
Lets_Get_Rusty/src/: main.rs
Small_Practicals/: Cargo.toml  notes.md  notes.txt
Small_Practicals/src/: main.rs
Variables/src/: main.rs
exercise/DONE_b_functions/src/: main.rs
exercise/DONE_c_simple_types/src/: main.rs
exercise/DONE_d_control_flow_strings/src/: main.rs
exercise/DONE_e_ownership_references/src/: main.rs
exercise/DONE_f_structs_traits/src/: main.rs
exercise/DONE_g_collections_enums/src/: main.rs
exercise/DONE_h_closures_threads/src/: main.rs
minigrep/: output.txt  poem.txt
minigrep/src/: lib.rs  main.rs
