[package]
name = "Guessing_Game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3" # same as ^0.8.3. Any version that is at least 0.8.3, but below 0.9.0

# Dependencies: External crates that the project depends on.
